--- a/app/sass/components/modules/top-filter.scss
+++ b/app/sass/components/modules/top-filter.scss
@@ -27,6 +27,13 @@
 
     > .filters {
         float: left;
+
+        > i {
+            display: none;
+            margin: (($header-height - $section-header-font-size) / 4.5) $filter-button-padding / -2 0 $filter-button-padding / 2;
+            font-size: $section-header-font-size * 1.3;
+            line-height: 1;
+        }
     }
 
     > .actions {
@@ -34,8 +41,10 @@
     }
 
     > div > span,
-    > div > div {
-        display: inline-block;
+    > div > div,
+    > div > i,
+    > div > button {
+        float: left;
     }
 
     > i {
@@ -47,7 +56,7 @@
     }
 
     > div > span {
-        margin: (($header-height - $section-header-font-size) / 4.5) 0;
+        margin: (($header-height - $section-header-font-size) / 4.5) $filter-button-padding / 2;
         font-size: $section-header-font-size;
         line-height: $section-header-font-size;
     }
@@ -55,19 +64,17 @@
     > div .select button {
         background: $select-list-button-bg-color;
         font-size: $section-header-font-size - .1;
-        margin-top: -$filter-button-padding / 2;
         padding: ($filter-button-padding / 2) $filter-button-padding;
 
         span {
             color: $base-accent-color;
-            margin-right: $filter-button-padding * 3;
         }
     }
 
     > div button {
         background: $filter-button-bg-color;
         border: $filter-button-border;
-        margin-top: -$filter-button-padding / 2;
+        margin-top: $filter-button-margin-top;
         font-size: $section-header-font-size - .1;
         padding: ($filter-button-padding / 2) $filter-button-padding * 2;
 
