--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,7 @@
 button,
 input[type="submit"] {
   -webkit-font-smoothing: antialiased;
-  background-color: #477dca;
+  background-color: #477DCA;
   border-radius: 0.1875em;
   color: white;
   display: inline-block;
@@ -18,7 +18,7 @@ input[type="submit"] {
 body {
   -webkit-font-smoothing: antialiased;
   background-color: white;
-  color: #333333;
+  color: #333;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
   line-height: 1.5; }
@@ -54,7 +54,7 @@ a {
   -webkit-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #477dca;
+  color: #477DCA;
   text-decoration: none; }
   a:hover {
     color: #2c5999; }
@@ -63,7 +63,7 @@ a {
     outline: none; }
 
 hr {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDD;
   border-left: none;
   border-right: none;
   border-top: none;
@@ -74,7 +74,7 @@ img {
   max-width: 100%; }
 
 blockquote {
-  border-left: 2px solid #dddddd;
+  border-left: 2px solid #DDD;
   color: #595959;
   margin: 1.5em 0;
   padding-left: 0.75em; }
@@ -87,7 +87,7 @@ cite {
 
 fieldset {
   background: #f7f7f7;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   margin: 0 0 0.75em 0;
   padding: 1.5em; }
 
@@ -117,7 +117,7 @@ select[multiple=multiple] {
   transition: border-color;
   background-color: white;
   border-radius: 0.1875em;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
@@ -131,7 +131,7 @@ select[multiple=multiple] {
   textarea:focus,
   input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus,
   select[multiple=multiple]:focus {
-    border-color: #477dca;
+    border-color: #477DCA;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
     outline: none; }
 
@@ -172,7 +172,7 @@ th {
   text-align: left; }
 
 td {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDD;
   padding: 0.75em 0; }
 
 tr, td, th {
@@ -210,7 +210,7 @@ input[type="submit"] {
 
 .progress-bar {
   background-color: #f2f2f2;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   box-shadow: inset 0 0 3px 0 rgba(115, 115, 115, 0.15);
   border-radius: 0.1875em;
   height: 30px;
@@ -238,31 +238,26 @@ input[type="submit"] {
 @-webkit-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-moz-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-ms-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-o-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 .select .select-dropdown li.active:after {
@@ -277,7 +272,7 @@ input[type="submit"] {
 input[type="submit"].primary,
 button.primary {
   background-color: #049cdb;
-  color: white; }
+  color: #fff; }
   input[type="submit"].primary:hover,
   button.primary:hover {
     background-color: #0378a9;
@@ -305,7 +300,7 @@ input.ng-invalid {
   padding: .5em;
   background-color: #ffc40d;
   border-radius: 0.1875em;
-  color: #333333; }
+  color: #333; }
 
 .select button {
   border-radius: .45em; }
@@ -314,7 +309,7 @@ input.ng-invalid {
 .select .select-dropdown {
   border-radius: .3em;
   position: relative;
-  background: white;
+  background: #fff;
   border: 0.1em solid #c4c4c4; }
   .select .select-dropdown:after, .select .select-dropdown:before {
     bottom: 100%;
@@ -326,7 +321,7 @@ input.ng-invalid {
     pointer-events: none; }
   .select .select-dropdown:after {
     border-color: rgba(119, 100, 213, 0);
-    border-bottom-color: white;
+    border-bottom-color: #fff;
     border-width: 0.5em;
     left: 50%;
     margin-left: -0.5em;
@@ -341,7 +336,7 @@ input.ng-invalid {
 
 button {
   background-color: #049cdb;
-  color: white; }
+  color: #fff; }
   button:hover {
     background-color: #0378a9;
     color: #e6e6e6; }
@@ -405,7 +400,7 @@ button {
 body {
   margin: 0;
   background-color: #e6e6e6;
-  color: #333333; }
+  color: #333; }
   body h1,
   body h2,
   body h3,
@@ -425,7 +420,7 @@ div.layout {
     z-index: 10000; }
     div.layout > header .title,
     div.layout > header .search {
-      color: #dddddd;
+      color: #DDD;
       font-size: 2em;
       position: relative;
       float: left; }
@@ -456,11 +451,11 @@ div.layout {
         background: none;
         border: 0;
         box-shadow: none;
-        color: #dddddd;
+        color: #DDD;
         border-radius: 0; }
         div.layout > header .search input:-webkit-autofill {
           -webkit-box-shadow: 0 0 0 50px #1a1a1a inset;
-          -webkit-text-fill-color: #dddddd; }
+          -webkit-text-fill-color: #DDD; }
   div.layout > aside,
   div.layout > .main {
     top: 4em; }
@@ -492,9 +487,9 @@ div.layout {
         div.layout > aside .modules li:hover {
           cursor: pointer;
           background: #666666;
-          color: white; }
+          color: #fff; }
         div.layout > aside .modules li.active {
-          background: black;
+          background: #000;
           color: #049cdb; }
         div.layout > aside .modules li i.reporter:before {
           content: '\f0f6'; }
@@ -518,7 +513,7 @@ div.layout {
         display: table;
         clear: both; }
       div.layout > aside .sections li:hover, div.layout > aside .sections li.active {
-        color: white;
+        color: #fff;
         background-color: #666666; }
       div.layout > aside .sections li:hover {
         cursor: pointer;
@@ -545,21 +540,30 @@ div.layout {
   white-space: nowrap; }
   .top-filter.active {
     background: #049cdb;
-    color: white; }
+    color: #fff; }
     .top-filter.active .select button {
       background: none;
-      border: white 0.1em solid; }
+      border: #fff 0.1em solid; }
       .top-filter.active .select button span {
-        color: white; }
+        color: #fff; }
   .top-filter.ic {
     padding-left: 3.51563em; }
   .top-filter > .filters {
     float: left; }
+    .top-filter > .filters > i {
+      display: none;
+      margin: 0.55556em -0.25em 0 0.25em;
+      font-size: 1.95em;
+      line-height: 1; }
+  .top-filter > div {
+    display: inline-block; }
   .top-filter > .actions {
     float: right; }
   .top-filter > div > span,
-  .top-filter > div > div {
-    display: inline-block; }
+  .top-filter > div > div,
+  .top-filter > div > i,
+  .top-filter > div > button {
+    float: left; }
   .top-filter > i {
     position: absolute;
     left: 0.53333em;
@@ -567,21 +571,19 @@ div.layout {
     font-size: 2em;
     color: #404040; }
   .top-filter > div > span {
-    margin: 0.55556em 0;
+    margin: 0.55556em 0.25em;
     font-size: 1.5em;
     line-height: 1.5em; }
   .top-filter > div .select button {
-    background: #dddddd;
+    background: #DDD;
     font-size: 1.4em;
-    margin-top: -0.25em;
     padding: 0.25em 0.5em; }
     .top-filter > div .select button span {
-      color: #049cdb;
-      margin-right: 1.5em; }
+      color: #049cdb; }
   .top-filter > div button {
-    background: #333333;
+    background: #333;
     border: none;
-    margin-top: -0.25em;
+    margin-top: 0.35em;
     font-size: 1.4em;
     padding: 0.25em 1em; }
     .top-filter > div button:hover {
@@ -597,7 +599,7 @@ div.layout {
   margin-top: 2px; }
   .main-content-list li.cl > div.active, .main-content-list li.cl > div:hover {
     background: #049cdb;
-    color: white; }
+    color: #fff; }
   .main-content-list li.cl > div > i {
     color: #404040; }
   .main-content-list li.cl > div > span,
@@ -666,20 +668,22 @@ div.layout {
     text-align: left;
     margin-left: 0.3em;
     margin-right: 0.3em;
-    border: #666666 0.1em solid; }
+    border: #666666 0.1em solid;
+    position: relative; }
     .select button.active {
       min-width: 10em; }
     .select button i {
       position: absolute;
-      right: 0.8em;
-      top: 20%;
+      right: 0.6em;
+      top: 25%;
       margin-left: 0.4em;
       color: #262626; }
     .select button span {
       display: block;
       overflow: hidden;
       white-space: nowrap;
-      text-overflow: ellipsis; }
+      text-overflow: ellipsis;
+      margin-right: 1.2em; }
   .select .select-dropdown {
     position: absolute;
     text-align: left;
@@ -688,7 +692,7 @@ div.layout {
     font-size: 1.1em;
     left: 0;
     top: 2.67273em;
-    background: white;
+    background: #fff;
     width: 100%;
     padding: 0.4em 0;
     border: #c4c4c4 0.1em solid;
@@ -720,6 +724,14 @@ div.layout {
     width: 14em; }
   div.layout > .main {
     margin-left: 14em; } }
+@media screen and (max-width: 82em) {
+  .top-filter {
+    min-width: 55em; }
+    .top-filter .filters > i {
+      display: inline-block; }
+    .top-filter .filters > span {
+      width: 0;
+      opacity: 0; } }
 div.layout > header .title {
   padding-right: 0.66667em; }
   div.layout > header .title:after {
@@ -854,3 +866,5 @@ input.ng-invalid {
   transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s, max-height cubic-bezier(0, 0.6, 0.85, 1) 0.3s; }
   .main-content-list > li.cl > ul li.cl > ul.expand {
     max-height: 1000px; }
+
+/*# sourceMappingURL=main.css.map */
