--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -78,7 +78,8 @@ $filter-button-padding:                 .5em;
 $filter-button-border:                  none;
 $filter-button-bg-color:                $dark-gray;
 $filter-button-bg-color-hov:            darken($dark-gray, 10%);
-$filter-button-margin-top:              .35em;
+$filter-button-margin-top:              .45em;
+$filter-select-margin-top:              .35em;
 
 // filter select list formatting and colors
 $select-list-border-width:              .1em;
@@ -93,7 +94,7 @@ $select-list-border:                    $select-list-border-color $select-list-b
 $select-list-color:                     lighten($dark-gray, 20%);
 $select-list-bg-color:                  $highlight-color;
 $select-list-button-padding:            .4em;
-$select-list-button-border:             lighten($dark-gray, 20%) .1em solid;
+$select-list-button-border:             $base-button-color .1em solid;
 $select-list-button-bg-color:           $base-button-color;
 $select-list-hl-bg-color:               darken($select-list-bg-color, 5%);
 $select-list-hl-button-border:          $highlight-color .1em solid;
@@ -101,19 +102,19 @@ $select-list-hl-button-bg-color:        none;
 
 // content list formatting and colors
 $content-list-item-spacing:             2px;
-$content-list-item-1-height:            modular-scale($base-font-size, 2, $golden);
+$content-list-item-1-height:            modular-scale($base-font-size, 2, $minor-seventh);
 $content-list-item-1-bg-color:          lighten($section-header-bg-color, 5%);
 $content-list-item-1-font-size:         modular-scale($base-font-size, 1, $perfect-fourth);
 $content-list-item-1-icon-size:         modular-scale($base-font-size, 1, $minor-seventh);
-$content-list-item-1-icon-top:          .25em;
+$content-list-item-1-icon-top:          .4em;
 $content-list-item-1-icon-left:         1.25;
 
-$content-list-item-2-height:            modular-scale($base-font-size, 2, $perfect-fifth);
+$content-list-item-2-height:            modular-scale($base-font-size, 2, $golden);
 $content-list-item-2-bg-color:          lighten($section-header-bg-color, 15%);
 $content-list-bg-color:                 lighten($section-header-bg-color, 20%);
 $content-list-item-2-font-size:         modular-scale($base-font-size, 1, $minor-third);
 $content-list-item-2-icon-size:         modular-scale($base-font-size, 1, $minor-seventh);
-$content-list-item-2-icon-top:          .15em;
+$content-list-item-2-icon-top:          .25em;
 $content-list-item-2-icon-left:         1.75;
 
 $content-list-item-3-spacing:           1px;
