--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -1,12 +1,12 @@
 <div class="top-filter ic appear-delayed ng-hide" ng-show="filter.loaded" ng-class="{'active':available.selectedItem === null}" ng-click="available.selectedItem = null" ng-controller="AvailableFilterCtrl as filter">
     <i class="fa fa-bars" ng-click="available.toggleExpand('all')"></i>
     <div class="filters">
-        <i class="fa fa-folder-open-o"></i>
-        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_SET"></span>
-        <div class="select" filter-select="filter.sets" filter-id="available.setFilterId"></div>
-        <i class="fa fa-tag"></i>
-        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_TAG"></span>
-        <div class="select" filter-select="filter.tags" filter-id="available.tagFilterId"></div>
+        <i class="fa fa-folder-open-o" ng-class="{'show':available.filter.set.key === null || !filter.setActive}" ng-click="filter.setActive = !filter.setActive"></i>
+        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_SET" ng-hide="available.filter.set.key === null && !filter.setActive"></span>
+        <div class="select" filter-select="filter.sets" filter-id="available.filter.set.id" ng-hide="available.filter.set.key === null && !filter.setActive"></div>
+        <i class="fa fa-tag" ng-class="{'show':available.filter.tag.key === null || !filter.tagActive}" ng-click="filter.tagActive = !filter.tagActive"></i>
+        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_TAG" ng-hide="available.filter.tag.key === null && !filter.tagActive"></span>
+        <div class="select" filter-select="filter.tags" filter-id="available.filter.tag.id" ng-hide="available.filter.tag.key === null && !filter.tagActive"></div>
     </div>
     <div class="actions">
         <button>
@@ -14,17 +14,27 @@
             <span translate="RUNNER.AVAILABLE.FILTER.RUN_ALL"></span>
         </button>
         <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_ENVIRONMENT"></span>
-        <div class="select" filter-select="filter.environments" filter-id="available.environmentFilterId"></div>
+        <div class="select" filter-select="filter.environments" filter-id="available.filter.env.id"></div>
     </div>
 </div>
 <ul class="main-content-list appear-delayed ng-hide" ng-show="available.storiesLoaded">
-    <li class="ic cl list-animate" ng-animate="'animate'" ng-repeat="book in storybooks() | storybookSearchFilter:app.searchQuery | storybookSetFilter:available.filterKeys.set | storybookTagFilter:available.filterKeys.tag">
+    <li class="ic cl list-animate" ng-animate="'animate'" ng-repeat="book in storybooks() | storybookSearchFilter:app.searchQuery | storybookSetFilter:available.filter.set.key | storybookTagFilter:available.filter.tag.key">
         <div ng-class="{'active':available.selectedItem === 'book'+book.id}" ng-click="available.selectedItem = 'book'+book.id">
             <i class="fa fa-bars" ng-click="available.toggleExpand('book',book.id)"></i>
             <span>{{ book.title }}</span>
+            <!--
+            <div class="actions">
+                <button>
+                    <i class="fa fa-play"></i>
+                    <span translate="RUNNER.AVAILABLE.FILTER.RUN"></span>
+                </button>
+                <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_ENVIRONMENT"></span>
+                <div class="select" filter-select="filter.environments" filter-id="available.filter.env.book.id(book.id)"></div>
+            </div>
+            -->
         </div>
         <ul>
-            <li class="ic cl" ng-repeat="story in book.stories | storySearchFilter:app.searchQuery:book.id | storySetFilter:available.filterKeys.set | storyTagFilter:available.filterKeys.tag">
+            <li class="ic cl" ng-repeat="story in book.stories | storySearchFilter:app.searchQuery:book.id | storySetFilter:available.filter.set.key | storyTagFilter:available.filter.tag.key">
                 <div ng-class="{'active':available.selectedItem === 'story'+story.id}" ng-click="available.expandStory(book.id,story.id)">
                     <i class="fa fa-caret-right"></i>
                     <span>{{ story.title }}</span>
